--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "passport-local-mongoose": "^4.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
