--- a/package.json
+++ b/package.json
@@ -4,46 +4,55 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start-w": "webpack-dev-server --inline --hot",
+    "start-w": "webpack-dev-server",
     "test": "jest",
     "lint": "eslint .",
-    "build-dev": "webpack -p"
+    "build-dev": "webpack --config webpack.config.js --progress --profile --colors"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "babel-core": "^6.24.1",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "body-parser": "~1.17.1",
+    "bootstrap": "4.0.0-alpha.6",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.15.5",
+    "css-loader": "^0.28.4",
+    "debug": "~2.6.3",
+    "ejs": "~2.5.6",
+    "express": "~4.15.2",
     "express-session": "^1.10.1",
+    "extract-text-webpack-plugin": "^2.1.2",
     "mongoose": "^4.9.6",
-    "morgan": "~1.9.0",
-    "node-sass": "^4.7.2",
+    "morgan": "~1.8.1",
+    "node-sass": "^4.5.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2",
-    "sass-loader": "^6.0.6",
-    "serve-favicon": "~2.4.5",
-    "webpack-dev-middleware": "^1.12.2",
-    "webpack-hot-middleware": "^2.21.0"
+    "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-transition-group": "^15.6.0",
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.1",
+    "reactstrap": "^4.8.0",
+    "sass-loader": "^6.0.5",
+    "serve-favicon": "~2.4.2",
+    "style-loader": "^0.18.2",
+    "webpack": "^2.5.1",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^4.13.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "jest": "^21.2.1",
-    "react-hot-loader": "^3.1.3",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jest": "^20.0.3",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.1",
+    "jest": "^19.0.2",
+    "react-hot-loader": "next",
     "supertest": "^3.0.0",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.4.5"
   }
 }
