--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "~1.17.1",
-    "bootstrap": "4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-alpha.6",
     "cookie-parser": "~1.4.3",
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.7",
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
@@ -26,19 +26,19 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "mongoose": "^4.9.6",
     "morgan": "~1.8.1",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.7.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
     "react": "^15.5.4",
-    "react-addons-css-transition-group": "^15.6.0",
-    "react-addons-transition-group": "^15.6.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-addons-transition-group": "^15.6.2",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
     "reactstrap": "^4.8.0",
-    "sass-loader": "^6.0.5",
     "serve-favicon": "~2.4.2",
     "style-loader": "^0.18.2",
+    "sass-loader": "^6.0.6",
     "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.11.0",
     "webpack-hot-middleware": "^2.18.0"
