--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start-w": "webpack-dev-server",
+    "start-prod": "SET NODE_ENV=production&& node ./bin/www",
     "test": "jest",
     "lint": "eslint .",
-    "build-dev": "webpack --config webpack.config.js --progress --profile --colors"
+    "build-prod": "SET NODE_ENV=production&&webpack -p --config webpack.config.js"
   },
   "dependencies": {
     "babel-core": "^6.24.1",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
-    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "~1.17.1",
     "bootstrap": "^4.0.0-alpha.6",
@@ -34,8 +34,11 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.1",
     "reactstrap": "^4.8.0",
+    "redux": "^3.7.2",
+    "redux-devtools": "^3.4.1",
     "sass-loader": "^6.0.6",
     "serve-favicon": "~2.4.2",
     "style-loader": "^0.18.2",
@@ -52,7 +55,9 @@
     "eslint-plugin-react": "^7.0.1",
     "jest": "^19.0.2",
     "react-hot-loader": "next",
-    "supertest": "^3.0.0",
-    "webpack-dev-server": "^2.4.5"
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-logger": "^3.0.6",
+    "supertest": "^3.0.0"
   }
 }
