--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "build-prod": "SET NODE_ENV=production&&webpack -p --config webpack.config.js"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "babel-core": "^6.24.1",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
     "body-parser": "~1.17.1",
     "bootstrap": "^4.0.0-alpha.6",
     "cookie-parser": "~1.4.3",
@@ -44,7 +46,8 @@
     "style-loader": "^0.18.2",
     "webpack": "^2.5.1",
     "webpack-dev-middleware": "^1.11.0",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
