--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^6.24.1",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
+    "babel-preset-airbnb": "^2.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
@@ -46,8 +47,6 @@
     "serve-favicon": "~2.4.2",
     "style-loader": "^0.18.2",
     "webpack": "^2.5.1",
-    "webpack-dev-middleware": "^1.11.0",
-    "webpack-hot-middleware": "^2.18.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
@@ -59,9 +58,12 @@
     "eslint-plugin-react": "^7.5.1",
     "jest": "^19.0.2",
     "react-hot-loader": "next",
+    "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "^1.4.0",
+    "redux-devtools-log-monitor": "^1.3.0",
     "redux-logger": "^3.0.6",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
