--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-airbnb": "^2.4.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "~1.17.1",
