--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-parser": "~1.4.3",
     "css-loader": "^0.28.7",
     "debug": "~2.6.3",
+    "disconnect": "^1.2.1",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-session": "^1.10.1",
