--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-register": "^6.26.0",
     "body-parser": "~1.17.1",
     "bootstrap": "^4.0.0-alpha.6",
+    "compression": "^1.7.1",
+    "compression-webpack-plugin": "^1.1.2",
     "cookie-parser": "~1.4.3",
     "css-loader": "^0.28.7",
     "debug": "~2.6.3",
